crates/ktask-tui/tests/snapshots/snapshots__configuration-and-doctor_empty.snap
---
source: crates/ktask-tui/tests/snapshots.rs
expression: drawn
---
9 Configuration and doctor
Doctor · no checks

Configuration · 0 settings · 0 not from the defaults


















r refresh  j/k scroll  g/G top/bottom  PgUp/PgDn page
Press ? for the key map
