crates/ktask-tui/tests/snapshots/snapshots__configuration-and-doctor_loading.snap
---
source: crates/ktask-tui/tests/snapshots.rs
expression: drawn
---
9 Configuration and doctor
Reading the configuration and running the checks…





















Press ? for the key map
