crates/ktask-tui/tests/snapshots/snapshots__failures_empty.snap
---
source: crates/ktask-tui/tests/snapshots.rs
expression: drawn
---
4 Failures
 circuit breaker: closed · no failures
No failures recorded.




















Press ? for the key map
