crates/ktask-tui/tests/snapshots/snapshots__failures_error.snap
---
source: crates/ktask-tui/tests/snapshots.rs
expression: drawn
---
4 Failures
 !! CIRCUIT BREAKER TRIPPED · task 1 · 13e11cad ×3/3 · no more automatic retries
  TASK ATT CLASS                  SIG      REPEATS      STATE       DETAIL
> 1    3   verification_failure   13e11cad ×3/3 TRIPPED remediating the verify g
  1    2   verification_failure   13e11cad ×2/3         remediating the verify g
  1    1   verification_failure   13e11cad ×1/3         remediating the verify g








────────────────────────────────────────────────────────────────────────────────
verification_failure — tests, lint, build or privacy checks failed
task 1 · attempt 3 · recorded by verification · remediating
signature 13e11cad3ee6abe5 · seen 3× of 3 · breaker TRIPPED
detail: the verify gate failed with exit code 1
policy: bounded by attempts, time and tokens; repeats trip the breaker
actions: cancel (c)

r retry  c cancel  x rerun-gate
Press ? for the key map
