crates/ktask-tui/tests/snapshots/snapshots__git_empty.snap
---
source: crates/ktask-tui/tests/snapshots.rs
expression: drawn
---
8 Git
Git
No task is selected




















Press ? for the key map
