crates/ktask-tui/tests/snapshots/snapshots__git_error.snap
---
source: crates/ktask-tui/tests/snapshots.rs
expression: drawn
---
8 Git
Git · task 1
Publication: not published
The task's worktree is gone, so its changes cannot be shown



















Press ? for the key map
