crates/ktask-tui/tests/snapshots/snapshots__git_loading.snap
---
source: crates/ktask-tui/tests/snapshots.rs
expression: drawn
---
8 Git
Git · task 1
Publication: not published
Reading the repository…



















Press ? for the key map
