crates/ktask-tui/tests/snapshots/snapshots__git_populated.snap
---
source: crates/ktask-tui/tests/snapshots.rs
expression: drawn
---
8 Git
Git · task 1 · 3 files · 2 commits
Publication: not published
Remote origin/main: HEAD is 2 ahead, 0 behind (as of the last fetch)
Changed files
> A block.rs
  D old.rs
  M parser.rs
Commits
  2b65e74 Drop the old parser
  18a2c27 Add the Block type
Diff · block.rs · lines 1–7 of 7
diff --git a/block.rs b/block.rs
new file mode 100644
index 0000000..9228d43
--- /dev/null
+++ b/block.rs
@@ -0,0 +1 @@
+pub struct Block;



j/k file  g/G first/last file  PgUp/PgDn scroll the diff
Press ? for the key map
